--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,7 @@
 name = "underpass"
-type = "javascript"
-compatibility_date = "2025-03-01"
+main = "src/index.js"
 
-[build]
-command = "npm run build"
+compatibility_date = "2025-03-01"
 
 [observability]
 enabled = true
