Improve & Simplify Router/Cloudflare

--- a/Router/Cloudflare/package.json
+++ b/Router/Cloudflare/package.json
@@ -1,7 +1,7 @@
 {
   "name": "router",
   "version": "1.0.1",
-  "description": "Edge Router/Load-Balancer/Rewriter implemented in Cloudflare Workers",
+  "description": "Edge Router implemented in Cloudflare Workers",
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
