--- a/LessPass/Cloudflare/wrangler.toml
+++ b/LessPass/Cloudflare/wrangler.toml
@@ -1,12 +1,13 @@
 name = "lesspass"
-main = "src/index.js"
+# The main entrypoint for deployments is now the obfuscated file in the dist/ directory.
+main = "dist/index.js"
 compatibility_date = "2025-08-29"
 
 [observability]
 enabled = true
 
 [vars]
-# Used to authenticate with the V2Ray/Xray client.
+# Used to authenticate with the Xray/V2Ray client.
 # Set USER_ID in Cloudflare Secrets instead of hardcoding it here.
 #USER_ID = "86c50e3a-5b87-49dd-bd20-03c7f2735e40"
 
