Replace new_classes with new_sqlite_classes in in TwoPass/Cloudflare

--- a/TwoPass/Server/Cloudflare/wrangler.toml
+++ b/TwoPass/Server/Cloudflare/wrangler.toml
@@ -9,7 +9,7 @@ bindings = [
 
 [[migrations]]
 tag = "v1"
-new_classes = ["TCPSession"]
+new_sqlite_classes = ["TCPSession"]
 
 [observability]
 enabled = true
