--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -1,11 +1,16 @@
-name: Client Build and Release
+name: TwoPass Client Build and Release
 
 on:
   push:
     branches: [ main ]
     tags: [ 'v*' ]
+    paths:
+      - 'TwoPass/Client/**'
+      - '.github/workflows/client-build.yml'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'TwoPass/Client/**'
 
 jobs:
   test:
@@ -20,7 +25,7 @@ jobs:
           go-version: '1.23'
       
       - name: Run tests
-        working-directory: ./Client
+        working-directory: ./TwoPass/Client
         run: |
           go test -v -race -coverprofile=coverage.out ./...
           go tool cover -html=coverage.out -o coverage.html
@@ -29,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage
-          path: Client/coverage.html
+          path: TwoPass/Client/coverage.html
 
   lint:
     name: Lint Go Client
@@ -46,7 +51,7 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: latest
-          working-directory: Client
+          working-directory: TwoPass/Client
 
   security:
     name: Security Scan
@@ -62,7 +67,7 @@ jobs:
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
-          args: '-no-fail -fmt sarif -out results.sarif ./Client/...'
+          args: '-no-fail -fmt sarif -out results.sarif ./TwoPass/Client/...'
       
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
@@ -84,7 +89,7 @@ jobs:
           go-version: '1.23'
       
       - name: Build all architectures
-        working-directory: ./Client
+        working-directory: ./TwoPass/Client
         run: make
       
       - name: Upload artifacts
@@ -92,8 +97,8 @@ jobs:
         with:
           name: binaries
           path: |
-            Client/dist/twopass-*
-            Client/dist/SHA256SUMS
+            TwoPass/Client/dist/twopass-*
+            TwoPass/Client/dist/SHA256SUMS
 
   release:
     name: Create Release
