--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -43,7 +43,7 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     needs: [build]
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
     permissions:
       contents: write
     steps:
@@ -55,7 +55,22 @@ jobs:
           name: binaries
           path: dist
       
-      - name: Create Release
+      - name: Create or Update Beta Release
+        if: github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: Beta
+          name: Beta Release
+          prerelease: true
+          files: |
+            dist/twopass-*
+            dist/SHA256SUMS
+          body: |
+            Automated beta build from latest commit
+            Commit: ${{ github.sha }}
+      
+      - name: Create Tag Release
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v1
         with:
           files: |
